# cowstick

./: README.md
key-pmod-rp/: readme.md
key-pmod-rp/firmware/: .gitignore  CMakeLists.txt
key-pmod-rp/firmware/src/: main.c  serial.c  serial.h
key-pmod-rp/hardware/prj-kicad/: cowstick-rp.kicad_pcb  cowstick-rp.kicad_prl  cowstick-rp.kicad_pro  cowstick-rp.kicad_sch  cowstick-rp.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
key-pmod-rp/hardware/prod/: cowstick-rp-B_Cu.gbr  cowstick-rp-B_Mask.gbr  cowstick-rp-B_Paste.gbr  cowstick-rp-Edge_Cuts.gbr  cowstick-rp-F_Cu.gbr  cowstick-rp-F_Mask.gbr  cowstick-rp-F_Paste.gbr  cowstick-rp-F_Silkscreen.gbr  cowstick-rp-In1_Cu.gbr  cowstick-rp-In2_Cu.gbr  cowstick-rp-NPTH.drl  cowstick-rp-PTH.drl  cowstick-rp-job.gbrjob
usbkey-ios/: README.md
usbkey-ios/bootloader/: Makefile  README.md  api.s  cowstick.ld  flash.c  flash.h  hardware.c  hardware.h  libc.c  libc.h  log.h  main.c  net.c  net.h  net_arp.c  net_arp.h  net_dhcp.c  net_dhcp.h  net_ipv4.c  net_ipv4.h  net_upgrd.c  net_upgrd.h  startup.s  types.h  uart.c  uart.h  usb.c  usb.h  usb_desc.h  usb_ecm.c  usb_ecm.h
usbkey-ios/hardware/doc/: ut-power.md
usbkey-ios/hardware/prj-kicad/: cowstick-01.kicad_pcb  cowstick-01.net  cowstick-01.pro  cowstick-01.sch  cowstick.dcm  cowstick.lib  fp-lib-table
usbkey-ios/hardware/prod/: cowstick-01-B.Cu.gbr  cowstick-01-B.Mask.gbr  cowstick-01-B.Paste.gbr  cowstick-01-Edge.Cuts.gbr  cowstick-01-F.Cu.gbr  cowstick-01-F.Mask.gbr  cowstick-01-F.Paste.gbr  cowstick-01-F.SilkS.gbr  cowstick-01-NPTH.drl  cowstick-01.drl
(+48 files in other folders)
